admin/src/components/base/Toast/Toast.css
.sl-toast-stack {
	left: 50%;
	transform: translateX(-50%);
	overflow: visible !important;
	z-index: 999999 !important;
}

.toast::part(base) {
	position: relative;
	left: calc(var(--sidebar-width) / 2);
	color: var(--text-onaccent);
	border: 0;
	box-shadow: 2px 1px 19px 0px #00000060;
}

.toast--fullscreen::part(base) {
	left: 0;
}

.toast::part(icon) {
	color: var(--text-onaccent);
	align-items: start;
	padding-top: 1.25rem;
}

.toast::part(close-button__base) {
	color: var(--text-onaccent);
}

.toast::part(close-button) {
	align-self: start;
	padding-top: 1.25rem;
}

